# secrets-locker

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py  secret_locker.py
app/templates/: index.html
deployment/: deployment.yaml  secret.yaml  service.yaml
