[tool.poetry]
name = "secrets-locker"
version = "0.1.0"
description = ""
authors = ["Will Carpenter <willcarpenterwastaken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^44.0.0"
flask = "^3.1.0"
boto3 = "^1.35.77"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
